successfully completed refresh token
