# pkg/api/handler/admin.go
@@ -19,6 +19,16 @@ func NewAdminHandler(usecase useCaseInterface.AdminUseCase) handlerInterface.Adm
 	return &AdminHandler{usecase}
 }
 
+// @Summary Create a new admin
+// @Description Create a new admin with provided details
+// @Tags Admin Authentication
+// @Accept json
+// @Produce json
+// @Param request body models.Admin true "Admin details"
+// @Success 201 {object} response.Response{} "Successfully created admin"
+// @Failure 400 {object} response.Response{} "Data given is not in required format"
+// @Failure 500 {object} response.Response{} "Internal server error"
+// @Router /admin/signUp [post]
 func (a *AdminHandler) SignUp(c *gin.Context) {
 	var admin models.Admin
 
@@ -36,7 +46,16 @@ func (a *AdminHandler) SignUp(c *gin.Context) {
 	succRes := response.MakeResponse(http.StatusCreated, "successfully created admin", id, nil)
 	c.JSON(http.StatusCreated, succRes)
 }
-
+// @Summary Log in as an admin
+// @Description Log in as an admin with provided credentials
+// @Tags Admin Authentication
+// @Accept json
+// @Produce json
+// @Param request body models.Admin true "Admin login credentials"
+// @Success 200 {object} response.Response{} "Successfully logged in"
+// @Failure 400 {object} response.Response{} "Provided data is not in required format"
+// @Failure 500 {object} response.Response{} "Internal server error"
+// @Router /admin/login [post]
 func (a *AdminHandler) Login(c *gin.Context) {
 	var admin models.Admin
 	if err := c.BindJSON(&admin); err != nil {
@@ -55,7 +74,18 @@ func (a *AdminHandler) Login(c *gin.Context) {
 	succRes := response.MakeResponse(http.StatusOK, "successfully login", token, nil)
 	c.JSON(http.StatusOK, succRes)
 }
-
+// @Summary Block or unblock a user
+// @Description Block or unblock a user based on the provided ID and block status
+// @Tags User Management
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param id path integer true "User ID"
+// @Param block query boolean true "Block status: true to block, false to unblock"
+// @Success 200 {object} response.Response{} "Successfully blocked/unblocked user"
+// @Failure 400 {object} response.Response{} "Boolean conversion failed"
+// @Failure 500 {object} response.Response{} "Internal server error"
+// @Router /admin/users/{id} [patch]
 func (a *AdminHandler) BlockOrUnBlock(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -90,9 +120,33 @@ func (a *AdminHandler) BlockOrUnBlock(c *gin.Context) {
 	succRes := response.MakeResponse(http.StatusOK, "successfully unblocked user", res, nil)
 	c.JSON(http.StatusOK, succRes)
 }
-
+// @Summary Get all users to admin
+// @Description Retrieve all users
+// @Tags User Management
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param page query integer false "Page number (default: 1)"
+// @Param count query integer false "Number of items per page (default: 3)"
+// @Success 200 {object} response.Response{} "Successfully retrieved users"
+// @Failure 400 {object} response.Response{} "int conversion failed"
+// @Failure 500 {object} response.Response{} "Internal server error"
+// @Router /admin/users [get]
 func (a *AdminHandler) GetUsers(c *gin.Context){
-	res,err:=a.UseCase.GetUsers()
+	page, err := strconv.Atoi(c.DefaultQuery("page", "1"))
+
+	if err != nil {
+		errRes := response.MakeResponse(http.StatusBadRequest, "bad request", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+	count, err := strconv.Atoi(c.DefaultQuery("count", "3"))
+	if err != nil {
+		errRes := response.MakeResponse(http.StatusBadRequest, "bad request", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errRes)
+		return
+	}
+	res,err:=a.UseCase.GetUsers(page,count)
 	if err!=nil{
 		errRes:=response.MakeResponse(http.StatusInternalServerError,"internal serverr error",nil,err.Error())
 		c.JSON(http.StatusInternalServerError,errRes)
