# pkg/api/routes/user.go
@@ -2,19 +2,19 @@ package routes
 
 import (
 	handlerInterface "github.com/aarathyaadhiv/met/pkg/api/handler/interface"
-	"github.com/aarathyaadhiv/met/pkg/api/middleware"
+	middleInterface "github.com/aarathyaadhiv/met/pkg/api/middleware/interface"
 	"github.com/gin-gonic/gin"
 )
 
-func UserRoutes(route *gin.RouterGroup, userHandler handlerInterface.UserHandler) {
-	route.POST("/sendOtp",userHandler.SendOtp)
-	route.POST("/verify",userHandler.VerifyOtp)
-	route.Use(middleware.UserAuthorization)
+func UserRoutes(route *gin.RouterGroup, userHandler handlerInterface.UserHandler, authMiddleware middleInterface.AuthMiddleware) {
+	route.POST("/sendOtp", userHandler.SendOtp)
+	route.POST("/verify", userHandler.VerifyOtp)
+	route.Use(authMiddleware.UserAuthorization())
 	{
-		profile:=route.Group("/profile")
+		profile := route.Group("/profile")
 		{
-			profile.POST("",userHandler.AddProfile)
-			profile.GET("",userHandler.GetProfile)
+			profile.POST("", userHandler.AddProfile)
+			profile.GET("", userHandler.GetProfile)
 		}
 	}
 }
